# mini-rag

./: .env.example  .gitignore  README.md  celery_app.py  main.py  pyproject.toml  requirements.txt
assets/: .gitignore
docker/: .gitignore  docker-compose.yml  docker_compose.yml
docker/minirag/: Dockerfile  alembic.example.ini  entrypoint.sh
docker/nginx/: default.conf
scripts/: run_app.sh
src/: .env.example  main.py  requirements.txt
src/controllers/: BaseController.py  NLPController.py  ProcessController.py
src/helpers/: config.py
src/models/: AssetModel.py  BaseDataModel.py  ChunkModel.py  ProjectModel.py
src/models/db_schemes/: asset.py  data_chunk.py  project.py
src/models/db_schemes/minirag/alembic/versions/: 5c36f70c3018_create_celery_task_executions_table.py  f36be60eceb6_create_celery_task_executions_table.py
src/models/db_schemes/minirag/schemes/: __init__.py
src/models/enums/: DataBaseEnum.py  ResponseEnums.py
src/routes/: base.py  data.py  nlp.py
src/routes/schemes/: nlp.py
src/stores/llm/: LLMEnums.py  LLMInterface.py  LLMProviderFactory.py
src/stores/llm/providers/: CoHereProvider.py  OpenAIProvider.py
src/stores/llm/templates/: template_parser.py
src/stores/vectordb/: VectorDBEnums.py  VectorDBInterface.py  VectorDBProviderFactory.py
src/stores/vectordb/providers/: PGVectorProvider.py  QdrantDBProvider.py
src/tasks/: data_indexing.py  file_processing.py  mail_service.py  maintenance.py  process_workflow.py
src/utils/: idempotency_manager.py  metrics.py
src/views/: index.html
